--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,11 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>pl.sda</groupId>
-  <artifactId>empty-jsp-webapp</artifactId>
+  <artifactId>books_library</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>war</packaging>
 
-  <name>empty-jsp-webapp Maven Webapp</name>
+  <name>Library WebApp</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
@@ -65,6 +65,14 @@
       <artifactId>hibernate-entitymanager</artifactId>
       <version>5.4.1.Final</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.10</version>
+      <scope>compile</scope>
+    </dependency>
+
   </dependencies>
 
   <build>
